# c-erp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  main.cpp
config/: system.cfg
core/: Container.hpp  RuleEngine.cpp  RuleEngine.hpp  UserContext.hpp
core/factories/: BaseFactory.hpp  Factories.hpp
core/infrastructure/: AuditService.cpp  AuditService.hpp  CsvParser.hpp  DbConnection.hpp  Errors.hpp  HttpServer.hpp  JsonRpcDispatcher.hpp  MigrationRunner.cpp  MigrationRunner.hpp  SessionManager.hpp  TtlCache.hpp  WebSocketServer.hpp
core/interfaces/: IFactory.hpp  IModel.hpp  IModule.hpp  IService.hpp  IView.hpp  IViewModel.hpp
core/services/: DbConnection.hpp  HttpService.hpp  JsonRpcDispatcher.hpp  SessionManager.hpp  WebSocketService.hpp
docs/: 003-ir-module-progress.md  004-ui-redesign-progress.md  005-account-module-progress.md  006-uom-product-progress.md  007-sale-module-progress.md  009-hr-module-progress.md  011-stock-module-progress.md  012-stock-sale-purchase-links-progress.md  013-order-lines-progress.md  014-transfer-invoice-po-forms-progress.md  015-transfer-form-deferred.md  016-product-form-deferred.md  017-phase17g-form-fixes-progress.md  018-phase27-chatter-progress.md  019-dle-security-product-form-progress.md  020-session-2026-03-23-progress.md  021-security-fixes-progress.md  022-portal-dle-decimal-progress.md  023-logging-progress.md  024-user-groups-progress.md  025-user-group-management-ui-progress.md  026-ir-id-registry-and-checklist.md  027-security-perf-portal-audit.md  028-security-perf-audit-2.md  029-partkeeper-integration-plan.md  030-partkeepr-detailed-integration-plan.md  031-security-perf-session-2026-03-29.md  032-s30-record-level-authorization-2026-03-30.md  033-p0-features-implementation-plan.md  034-computed-fields-onchange-progress.md  035-db-migrations-csv-import-export-progress.md  036-audit-trail-occ-progress.md  account-module-plan.md  auth-module-progress.md  base-module-progress.md  database-schema.md  dle-adding-block-properties.md  document-template-user-guide.md  executed-plan-1.md  executed-plan-3.md  (+8 more)
modules/account/: AccountModule.cpp  AccountModule.hpp  AccountViews.hpp
modules/auth/: AuthModule.cpp  AuthModule.hpp  AuthService.hpp  AuthSignupModule.cpp  AuthSignupModule.hpp  AuthViewModel.hpp  AuthViews.hpp  Groups.hpp  ResCompany.hpp  ResGroups.hpp  ResUsers.hpp
modules/base/: BaseModel.hpp  BaseModule.cpp  BaseModule.hpp  BaseService.hpp  BaseView.hpp  BaseViewModel.hpp  Domain.hpp  FieldRegistry.hpp  GenericViewModel.hpp  WorldData.hpp
modules/hr/: HrModule.cpp  HrModule.hpp
modules/ir/: IrModule.cpp  IrModule.hpp
modules/mail/: MailHelpers.hpp  MailModule.cpp  MailModule.hpp
modules/mrp/: MrpModule.cpp  MrpModule.hpp
modules/portal/: PortalModule.cpp  PortalModule.hpp
modules/product/: ProductModule.cpp  ProductModule.hpp
modules/purchase/: PurchaseModule.cpp  PurchaseModule.hpp
modules/report/: ReportModule.cpp  ReportModule.hpp
modules/sale/: SaleModule.cpp  SaleModule.hpp
modules/stock/: StockModule.cpp  StockModule.hpp
modules/uom/: UomModule.cpp  UomModule.hpp
scripts/: install_dep.sh  install_wkhtml.sh  setup_db.sh  setup_frontend.sh
web/static/: index.html  portal.html  portal.js
web/static/src/: app.css  app.js
web/static/src/components/: Dashboard.js  DatePicker.js  FieldsInspector.js  LoginPage.js  PartnerList.js  UserMenu.js
web/static/src/services/: rpc.js
